# qml-live2d

./: .gitmodules  CMakeLists.txt  README.md
example/: main.cpp  main.qml
example/data/lafei_4/: lafei_4.model3.json
include/: Live2DItem.h  Live2DItemRenderer.h  live2ditem.h  live2ditemrenderer.h
src/: live2ditem.cpp  live2ditemrenderer.cpp
src/CubismNativeOpenGLSample/: LAppDefine.cpp  LAppDefine.hpp  LAppLive2DManager.cpp  LAppLive2DManager.hpp  LAppModel.cpp  LAppModel.hpp  LAppPal.cpp  LAppPal.hpp  LAppSprite.cpp  LAppSprite.hpp  LAppTextureManager.cpp  LAppTextureManager.hpp  LAppView.cpp  LAppView.hpp
